# tournaments-api

./: .gitignore  .pre-commit-config.yaml  .travis.yml  Dockerfile  Makefile  Procfile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements-test.txt  requirements.txt
alembic/: env.py
alembic/versions/: 258f4b997ae2_participant.py  86bc04893f24_participants.py  9031569c7f21_tournaments.py  bd5dc2779032_players.py  ce349a7ca482_users.py  d45b762c6d69_initial.py  d4e20e87a0af_tournament.py
app/: auth.py  crud.py  database.py  dependencies.py  enums.py  loggers.py  main.py  models.py  settings.py
app/managers/: __init__.py  crud.py  websocket.py
app/models/: __init__.py  game.py  participant.py  player.py  tournament.py
app/routers/: auth.py  games.py  participants.py  players.py  tournament.py  tournaments.py  websocket.py
app/schemas/: __init__.py  auth.py  game.py  participant.py  participants.py  player.py  players.py  scoring.py  tournament.py  tournaments.py  websocket.py
tests/: conftest.py  helpers.py  test_auth.py  test_games.py  test_participants.py  test_players.py  test_tournaments.py  utils.py
utils/: database.py  emulator.py  mock_data.py
